# server_handler/internal/api/routes.go
@@ -34,6 +34,7 @@ func SetupRoutes() *gin.Engine {
 	{
 		api.GET("/info", serverHandler.GetInfo)
 		api.GET("/status", serverHandler.GetStatus)
+		api.GET("/logs", serverHandler.GetLogs)
 		api.POST("/command", serverHandler.PostCommand)
 		api.GET("/resources", serverHandler.GetResourceUsage)
 	}
